@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2023-09-07T08:17:12Z",
+  "timestamp" : "2023-09-08T08:16:34Z",
   "count_outdated" : 450,
   "uniques_outdated" : 282,
-  "count" : 451,
-  "uniques" : 283,
+  "count" : 452,
+  "uniques" : 284,
   "clones" : [
     {
       "timestamp": "2023-08-26T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-08T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
